--- a/ccwidget/js/package.json
+++ b/ccwidget/js/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@jupyter-widgets/base": "^1.1 || ^2 || ^3 || ^4",
     "d3": "^6.6.0",
+    "d3-lasso": "0.0.5",
     "loadash": "^1.0.0",
     "lodash": "^4.17.21"
   }
